--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile_picture.jpg"
   name             : "Olivier Côté"
   pronouns         : # example: "she/her"  
-  bio              : "PhD student in actuarial science at Université Laval"
+  bio              : "Université Laval"
   location         : "Québec, QC, Canada"
   employer         : "School of actuarial science, Université Laval"
   uri              : # URL
