--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Université Laval"
   location         : "Québec, QC, Canada"
-  employer         : "School of actuarial science, Université Laval"
+  employer         : "Université Laval"
   uri              : # URL
   email            : "olivier.cote.12@ulaval.ca" 
 
