--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@
 locale                   : "en-US"
 title                    : "Olivier Côté"
 title_separator          : "-"
-name                     : &name "Olivier Côté"
-description              : &description "personal description"
+name                     : &name "Olivier Côté, ACAS"
+description              : &description "Ph. D. Candidate in Actuarial Science"
 url                      : https://olicoside.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "olicoside/olicoside.github.io"
